--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,15 @@
 version: '3.3'
 services:
   jenkins:
-    image: pluhin31/jenkins_ci:icinga2
+    image: image_test
+    #    image: pluhin31/jenkins_ci:icinga2
     container_name: jenkins_plu
     user: jenkins
     volumes:
       - /home/jenkins:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
-      - icinga2_etc:/etc/icinga2
     ports:
       - "8080:8080"
       - "5000:5000"
       - "50000:50000"
-  icinga2:
-    image: pluhin31/icinga2_agent:latest
-    container_name: icinga2_agent
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - icinga2_etc:/etc/icinga2
-    ports:
-    - "5665:5665"
-volumes:
-  icinga2_etc:
