--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     user: jenkins
     volumes:
       - /home/jenkins:/var/jenkins_home
+      - /home/icinga2:/var/lib/icinga2
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
     ports:
